# recordloop

./: .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile  PRODUCT.md  README.md  SETUP.md  __init__.py  __main__.py  action.yml  bridge.py  cloud.py  config.py  decorators.py  demo_test.py  example.py  pyproject.toml  recorder.py  report.py  requirements.txt  runner.py  setup_wizard.py  storage.py  test_runner.py
.github/workflows/: recordloop-api-smoke.yml  recordloop.yml
api/: README.md  analyzer.py  cloud_recorder.py  gif_builder.py  github_client.py  login.py  login_capture.py  main.py  models.py  repo_context.py  requirements.txt  run_action.py
api/tests/: test_smoke.py
demo/: app.html  run_demo.py
demo/output/: test_demo.py
generated-tests/: recording_demo.json  test_react_demo.py
js/: build.js  package.json
js/src/: core.js  index.js  react.jsx  vue.js
src/recordloop/: __init__.py  __main__.py
src/recordloop/bridge/: __init__.py  server.py
src/recordloop/capture/: __init__.py  recorder.py  replayer.py  video.py
src/recordloop/cli/: __init__.py  main.py
src/recordloop/config/: __init__.py  settings.py
src/recordloop/core/: __init__.py  diff.py  normalizer.py  session.py
src/recordloop/integrations/: __init__.py  instantdb.py  s3.py
src/recordloop/mcp/: __init__.py  server.py
tests/: conftest.py  test_integration.py
