[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recordloop"
version = "2.0.0"
description = "Structured behavioral diff for browser sessions. Local-first, no cloud required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["browser", "testing", "recording", "diff", "playwright", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
capture = [
    "playwright>=1.44.0",
    "watchdog>=4.0",
]
mcp = [
    "mcp>=1.0",
]
cloud = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.9",
    "ruff>=0.4",
]
all = [
    "recordloop[capture,mcp,cloud]",
]

[project.scripts]
recordloop = "recordloop.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/recordloop"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff (linter / formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["recordloop"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
mypy_path = "src"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
